<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registre">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:layout_marginTop="40dp"
    android:textSize="60sp"
    android:text="@string/registre">
</TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="60dp"
        android:textAlignment="center"
        android:textSize="40dp"
        android:text="@string/el_teu_nom"
        android:id="@+id/nomReg">

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="40dp"
        android:id="@+id/cognomReg"
        android:textAlignment="center"
        android:text= "@string/el_teu_cognom">

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="40dp"
        android:textAlignment="center"
        android:id="@+id/psw"
        android:text= "@string/contrasenya">
    </EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="40sp"
        android:textAlignment="center"
        android:text="@string/edat">

    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="60dp"
        android:layout_gravity="center"
        android:text="Guardar">

    </Button>

</LinearLayout>

</FrameLayout>




