<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="60dp"
        android:textAlignment="center"
        android:text="@string/cerca_usuari" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="60sp"
        android:textAlignment="center"
        android:text="@string/nom_usuari" />

    <Button
        android:layout_width="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/cardview_dark_background"
        android:textSize="80sp"
        android:text="@string/cerca"
        android:layout_height="wrap_content">

    </Button>

</LinearLayout>

</FrameLayout>